--- a/html/index6.html
+++ b/html/index6.html
@@ -3,8 +3,104 @@
 <head>
 	<meta charset="UTF-8">
 	<title>通过HTML及CSS模拟报纸排版</title>
+	<style type="text/css">
+		* {margin: 0;padding: 0}
+		body {background-color: #eee;}
+		.container {background-color: white;width: 980px;position: absolute;left: 50%;margin-left: -490px;}
+		/*header*/
+		.header {border-bottom: 2px solid #938e8c;height:61px;margin-left: 44px;margin-right: 44px;position: relative;font-family:'SimHei';font-size: 12px}
+		.header img {width: 110px;height: 61px}
+		.header span.webAddress {color:#ffffff;position:absolute;bottom: 0px;left:5px}
+		.header span.date {color:red;position: absolute;bottom: 0px;right: 5px}
+		/*content*/
+		.content {margin: 0px 44px}
+		.content_top {margin-top: 30px;position: relative;}
+		.content_top .greenMask {position: absolute;left: 0;top: 0}
+		.content_top .redMask {position: absolute;left: 450px;top: 0}
+		.content_top_top {position: absolute;top: 0;right: 0;border-top: 2px solid #cc8091;width: 203px}
+		.content_top_top_p1 {font-size: 24px;color: #000000;font-family:'Microsoft YaHei';text-decoration:underline;line-height: 40px}
+		.content_top_top_p1 span {font-size: 30px}
+		.content_top_top_p2 {font-size: 12px;color: #676767;font-family: 'KaiTi';line-height: 10px}
+		.content_top_bottom {position: absolute;bottom: 0;right: 0;
+			width: 203px}
+
+		.content_mid {width: 641px;position: relative;margin-top: 30px}
+		.content_mid dl {float: left;width:30%;height: 100%}
+		.content_mid dl dt {font-size: 16px;text-decoration:underline;font-weight: bold;}
+		.content_mid dl dd {font-size: 12px;color: #231815;font-family: 'Microsoft YaHei';line-height: 16px;margin-top: 10px}
+		
+		.content_bottom {}
+		.content_bottom_left,.content_bottom_right {width: 49%;border: 1px solid red;height: 200px}
+		.content_bottom_left {float: left;}
+		.content_bottom_right {float: right;}
+		/*clear fix*/
+		.clearfix:after,.clearfix:before {content: "";display: table;}
+		.clearfix:after {clear: both;}
+		.clearfix {*zoom: 1;}
+
+		.alpha-07 {
+			filter:alpha(opacity=50);   
+			-moz-opacity:0.5;   
+      		-khtml-opacity: 0.5;   
+      		opacity: 0.5;
+      	}
+	</style>
 </head>
 <body>
-	
+	<div class="container">
+		<div class="header">
+			<img src="./image/red.png">
+			<span class="webAddress">ife.baidu.com</span>
+			<span class="date">2016.03</span>
+		</div>
+		<div class="content">
+			<div class="content_top">
+				<img src="./image/peitu.png">
+				<img src="./image/greenMask.png" class="greenMask">
+				<img src="./image/redMask.png" class="redMask">
+				<div class="content_top_top">
+					<p class="content_top_top_p1"><span>A</span>BOUT<br><span>T</span>ECHNOLOGE</p>
+					<p class="content_top_top_p2">About technologe About technologe About technologe About technologe</p>
+					<p style="font-size: 116px;color: #75b86b;font-family: 'YouYuan';font-style:italic;font-weight: bold;text-align: left;">700</p>
+				</div>
+				<div class="content_top_bottom">
+					<div style="float: right;position: absolute;bottom: 0;right:50px"> 
+					<p style="font-size: 21px;color: #cc8091;font-family: 'Microsoft YaHei'">css</p>
+					<p style="font-size: 12px;color: #cc8091;font-family: 'Microsoft YaHei'">cssscssscss</p>
+					</div>
+					<p style="font-size: 55px;color: #cc8091;font-family: 'Microsoft YaHei';float: left;height: 60px">3.2</p>
+				</div>
+			</div>
+
+			<div class="content_mid clearfix">
+
+				<dl>
+					<dt style="color: #75b86b;">What</dt>
+					<dd class="alpha-07">前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</dd>
+				</dl>
+				<dl style="position: absolute;left: 50%;left: 50%;margin-left: -15%">
+					<dt style="color: #d2994f;">When</dt>
+					<dd class="alpha-07">前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</dd>
+				</dl>
+				<dl style="position:absolute;right: 0; ">
+					<dt style="color: #cc7680;">How</dt>
+					<dd class="alpha-07">前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+					<p style="position: absolute;bottom: 5px;line-height: 16px;">
+						What------<span class="alpha-07" style="font-family: 'Microsoft YaHei';color: #cd4a48;font-style: italic;">40%</span><br>
+						What------<span class="alpha-07" style="font-family: 'Microsoft YaHei';color: #cd4a48;font-style: italic;">40%</span><br>
+						What------<span class="alpha-07" style="font-family: 'Microsoft YaHei';color: #cd4a48;font-style: italic;">40%</span><br>
+					</p>
+					</dd>
+				</dl>
+			</div>
+			<div class="content_bottom clearfix">
+				<div class="content_bottom_left">
+					
+				</div>
+				<div class="content_bottom_right"></div>
+			</div>
+		</div>
+		<div class="footer"></div>
+	</div>
 </body>
 </html>
