--- a/html/index6.html
+++ b/html/index6.html
@@ -29,10 +29,23 @@
 		.content_mid dl dt {font-size: 16px;text-decoration:underline;font-weight: bold;}
 		.content_mid dl dd {font-size: 12px;color: #231815;font-family: 'Microsoft YaHei';line-height: 16px;margin-top: 10px}
 		
-		.content_bottom {}
-		.content_bottom_left,.content_bottom_right {width: 49%;border: 1px solid red;height: 200px}
-		.content_bottom_left {float: left;}
+		.content_bottom {overflow: hidden;}
+		.content_bottom_left {float: left;width: 415px;}
 		.content_bottom_right {float: right;}
+		.content_bottom_left_bottom {margin-top: 20px}
+		.content_bottom_left_bottom p {font-size: 12px;color: #767777;font-family: 'SimSun';line-height: 16px}
+		.content_bottom_left_bottom p:first-child:first-letter {font-size: 70px;color: #f5e327;font-family: 'Microsoft YaHei';float: left;display: block;line-height: 1em}
+
+		.content_bottom_right_bottom ul {list-style-type: square;}
+		.content_bottom_right_bottom li {padding-top: 20px}
+		.content_bottom_right_bottom li .sp1{font-size: 16px;color: #5a5b5b;font-family: 'SimSun';font-style: italic;text-align: left;}
+		.content_bottom_right_bottom li .sp2{font-size: 12px;color: #5a5b5b;font-family: 'SimSun';font-style: italic;text-align: right;}
+		.content_bottom_right_bottom_red {width: 260px;height: 160px;position: absolute;bottom: 0;left: 0;background-color: #d45d5c;text-align: center;}
+		.my_p:first-letter {float: left;font-size: 72px;color: #d45d5c;font-family: "黑体"}
+		.my_p {font-size: 14px;line-height: 16px;color: #5a5b5b}
+		/*footer*/
+		.footer {height: 61px;border-top:1px solid #928e8c;margin: 20px 44px 0 44px;position: relative;}
+		.footer span {font-size: 12px;color: #d45d5c;font-family: '黑体';position: absolute;top: 5px;right: 5px}
 		/*clear fix*/
 		.clearfix:after,.clearfix:before {content: "";display: table;}
 		.clearfix:after {clear: both;}
@@ -47,7 +60,7 @@
 	</style>
 </head>
 <body>
-	<div class="container">
+	<div class="container clearfix">
 		<div class="header">
 			<img src="./image/red.png">
 			<span class="webAddress">ife.baidu.com</span>
@@ -93,14 +106,55 @@
 					</dd>
 				</dl>
 			</div>
-			<div class="content_bottom clearfix">
+			<div class="content_bottom">
 				<div class="content_bottom_left">
-					
+					<div style="padding-bottom: 20px;width: 415px;border-bottom: 2px solid #11456b">
+						<p style="font-size: 42px;color: #11456b;font-family: 'SimHei';font-weight: bold;line-height: 1"><span style="font-size: 72px;color: #f5e327;font-weight: bold;font-style: italic;font-family: 'SimHei'">THE</span>&nbsp;TECHNOLOGE<br>OF&nbsp;FRONT<br><span style="font-size: 33px">前端技术领域</span></p>
+					</div>
+					<div class="content_bottom_left_bottom">
+						<p>前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p><p style="text-indent: 2em">前端前端前端前端前端前端前端
+						<img src="./image/peitu3.png" style="float: right;margin:20px 0px 20px 20px ">	前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p><p style="text-indent: 2em">前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端</p>
+					</div>
 				</div>
-				<div class="content_bottom_right"></div>
+				<div class="content_bottom_right">
+					<div style="position: relative;height: 257px">
+						<img src="./image/peitu2.png">
+						<div class= "alpha-07" style="width: 458px;height: 61px;position: absolute;bottom: 0;left: 0;background-color: black" >
+							<div style="height: 44px;border-left: 3px solid #72b16a;position: absolute;top: 50%;margin-top: -22px;left: 10%;">
+								<span style="line-height: 44px;color: #ffffff;font-size: 26px;font-family: 'Microsoft YaHei';padding: 10px">前端技术</span>
+								<span style="color: #72b16a;font-size: 12px;font-family: 'Microsoft YaHei';letter-spacing: 140%">前端技术前端技术</span>
+							</div>
+						</div>
+					</div>
+					
+					<div class="content_bottom_right_bottom" style="background-color: #eeedd6;width: 459px;height: 318px;position: relative;">
+						<ul style="margin-left: 30px">
+							<li><span class="sp1">前端前端前端前端前端前端前.......................</span><span class="sp2">前端</span></li>
+							<li><span class="sp1">前端前端前端前端前端前端.....................</span><span class="sp2">前端</span></li>
+							<li><span class="sp1">前端前端前端前端前端前端前端前端...............</span><span class="sp2">前端</span></li>
+						</ul>
+
+						<div class="content_bottom_right_bottom_red">
+							<div style="display: inline-block;">
+								<p class="content_bottom_right_bottom_red_p" style="font-size: 110px;color: #ffffff;font-family: 'Microsoft YaHei';line-height: 160px">0</p>
+							</div>
+								<div style="width: 2px;height: 86px;background-color: #ffffff;display: inline-block;"></div>
+							<div style="display: inline-block;width: 65%">
+								<p style="text-align: left;font-size: 21px;font-family: 'SimHei';font-style: italic;line-height: 24px;color: #ffffff">ONE&nbsp;TWO<br>THREE&nbsp;FOUR&nbsp;FIVE</p>
+								<p style="font-size: 12px;color: #ffffff;font-family: '黑体';line-height: 12px;text-align: left;">hello world hello world hello world hello world hello world hello world hello world</p>
+							</div>
+						</div>
+
+						<div style="position: absolute;bottom: 0;right: 0;width: 199px;height: 160px">
+							<p class="my_p" style="font-size: 14px">&quot;word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello &quot;</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="footer"></div>
+		<div class="footer">
+			<span>ife.baidu.com</span>
+		</div>
 	</div>
 </body>
 </html>
