--- a/html/index6.html
+++ b/html/index6.html
@@ -41,8 +41,10 @@
 		.content_bottom_right_bottom li .sp1{font-size: 16px;color: #5a5b5b;font-family: 'SimSun';font-style: italic;text-align: left;}
 		.content_bottom_right_bottom li .sp2{font-size: 12px;color: #5a5b5b;font-family: 'SimSun';font-style: italic;text-align: right;}
 		.content_bottom_right_bottom_red {width: 260px;height: 160px;position: absolute;bottom: 0;left: 0;background-color: #d45d5c;text-align: center;}
-		.my_p:first-letter {float: left;font-size: 72px;color: #d45d5c;font-family: "黑体"}
 		.my_p {font-size: 14px;line-height: 16px;color: #5a5b5b}
+		.left_q,.right_q {font-size: 72px;color: #d45d5c;font-family:黑体,sans-serif}
+		.left_q {float: left;padding-top: 10px}
+		.right_q {float: right;padding-top: 20px}
 		/*footer*/
 		.footer {height: 61px;border-top:1px solid #928e8c;margin: 20px 44px 0 44px;position: relative;}
 		.footer span {font-size: 12px;color: #d45d5c;font-family: '黑体';position: absolute;top: 5px;right: 5px}
@@ -58,6 +60,7 @@
       		opacity: 0.5;
       	}
 	</style>
+	<link rel="stylesheet" type="text/css" href="./css/css6.css">
 </head>
 <body>
 	<div class="container clearfix">
@@ -145,8 +148,8 @@
 							</div>
 						</div>
 
-						<div style="position: absolute;bottom: 0;right: 0;width: 199px;height: 160px">
-							<p class="my_p" style="font-size: 14px">&quot;word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello &quot;</p>
+						<div style="position: absolute;bottom: 0;right: 0;width: 199px;height: 160px;">
+							<p class="my_p" style="font-size: 14px;margin-left: 10px"><span class="left_q">"</span>word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello word hello<span class="right_q">"</span></p>
 						</div>
 					</div>
 				</div>
