--- a/javascript/js_5.html
+++ b/javascript/js_5.html
@@ -5,10 +5,27 @@
 	<title>Document</title>
 	<style type="text/css">
 		* {margin: 0;padding: 0;}
-		.container {width: 900px;position: absolute;left: 50%;margin-left: -450px;margin-top: 10px;text-align: center;height: 200px;font-size: 0;letter-spacing: -4px;word-spacing: -4px}
-		#list {list-style: none;overflow: hidden;position: absolute;width: 100%;}
-		#list li {background: red;color: #ffffff;width:30px;height: 30px;text-align: center;font-size: 14px;display: inline-block;*display:inline;zoom:1;margin: 2px;line-height: 30px;vertical-align: bottom;letter-spacing: normal;word-spacing: normal;}
-		button {letter-spacing: normal;word-spacing: normal;}
+		.container {width: 1100px;position: absolute;left: 50%;margin-left: -550px;margin-top: 10px;text-align: center;height: 200px;font-size: 0;letter-spacing: -4px;word-spacing: -4px}
+		#list {list-style: none;overflow: hidden;position: relative;width: 100%;height: 100%;text-align: left;}
+		#list li {
+			background: red;color: #ffffff;
+			width:30px;				
+			height: 30px;
+			text-align: center;
+			font-size: 14px;
+			display: inline-block;
+			*display:inline;
+			zoom:1;
+			margin: 2px;
+			line-height: 30px;
+			vertical-align: bottom;
+			letter-spacing: normal;
+			word-spacing: normal;
+			position: absolute;
+			bottom: 0;
+			transition:left .2s ease-in-out;
+		}
+		button {letter-spacing: normal;word-spacing: normal;margin: 8px}
 	</style>
 </head>
 <body>	
@@ -28,7 +45,7 @@
 		
 	<script type="text/javascript">
 		(function(){
-			const maxNode = 60;
+			const maxNode = 30;
 			var left_in = document.getElementById("left_in");
 			var right_in = document.getElementById("right_in");
 			var left_out = document.getElementById("left_out");
@@ -49,6 +66,7 @@
 				}
 
 				list.insertBefore(createNode(num),list.firstChild);
+				setleft(list.children);
 				}
 			
 
@@ -64,6 +82,7 @@
 					return;
 				}
 				list.appendChild(createNode(num));
+				setleft(list.children);
 			}
 
 			function left_out_f() {
@@ -100,7 +119,8 @@
 				node.animEnd = function(){
 					let num = this.innerHTML;
 					list.removeChild(this);
-					alert(num);
+					// alert(num);
+					setleft(list.children);
 				};
 				timer = setInterval(function() {
 				var temp = node.style.opacity-=0.05;
@@ -140,7 +160,12 @@
 					list.appendChild(sortedChildren[i]);
 				}
 			}
-
+			/*reset the left of all <li>*/
+			function setleft(items) {
+				[].forEach.call(items,function(item,index){
+					item.style.left = `${5*(index+1)+30*index}px`;
+				});
+			}
 			list.addEventListener('click',function(event){
 				var evet  =event || window.event;
 				var target = event.target || event.srcElement;
