--- a/javascript/js_7.html
+++ b/javascript/js_7.html
@@ -3,9 +3,32 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style type="text/css">
+		* {margin: 0;padding: 0}
+		html,body {width: 100%;height: 100%}
+	</style>
 </head>
 <body>
+	<div id="container" style="width: 100%;height: 100%;">
+		<canvas id="canvas" style="border: 2px solid #999;position: absolute;left: 50%;margin-left: -600px;top: 50%;margin-top: -300px"></canvas>
+	</div>
+	
 	<script type="text/javascript">
+		var i = 0;
+		var circle = {
+			color : '#FF0000',
+			raduis: 20,
+			circle_magin : 10
+		};
+		var text = {
+			font : '30px Airal',
+			color : '#ffffff',
+			margin_top:10,
+		}
+		var line = {
+			color:'#000000',
+			lineWidth : 2
+		}
 		/**TraversalType*/
 		var TraversalType = {
 			preOrder : 1,
@@ -29,22 +52,28 @@
 			
 		}
 
-		Tree.prototype.traversal = function(type){
+		Tree.prototype.traversal = function(type,callBack){
 			switch(type){
 				case TraversalType.preOrder:
+					i = 0;
 					preOrder(this._rootNode);
 					break;
 				case TraversalType.midOrder:
+					i = 0;
 					midOrder(this._rootNode);
 					break;
 				case TraversalType.backOrder:
+					i = 0;
 					backOrder(this._rootNode);
 					break;
 			}
 			/**前序遍历*/
 			function preOrder(node){
 				if(node!=null){
-					alert(node.data);	
+					if(callBack){
+						callBack(node,i);
+						i++;
+					}	
 					preOrder(node.left);
 					preOrder(node.right);
 				}
@@ -54,7 +83,10 @@
 			function midOrder(node){
 				if(node!=null){
 					midOrder(node.left);
-					alert(node.data);
+					if(callBack){
+						callBack(node,i);
+						i++;
+					}	
 					midOrder(node.right);
 				}
 			}
@@ -64,18 +96,80 @@
 				if(node!=null){
 					backOrder(node.left);
 					backOrder(node.right);
-					alert(node.data);
+					if(callBack){
+						callBack(node,i);
+						i++;
+					}	
 				}
 			}
 
 		}
 
-		Tree.prototype.createTree = function(node,dataArr){
-			if(data <= 10){
-				node = new Node(data);
-				createTree(node.left);
-			}
+		// Tree.prototype.createTree = function(node,dataArr){
+		// 	if(data <= 10){
+		// 		node = new Node(data);
+		// 		createTree(node.left);
+		// 	}
+		// }
+		Tree.prototype.draw = function(c){
+			c.font = text.font;
+			var drawWidth = c.cus_width;
+			var drawHeight = c.cus_height;
+			// tree.traversal(TraversalType.preOrder,function(node,index){
+			// 	drawNode(node,index);
+			// });
+			var root = tree._rootNode;
+			root.circle_x = drawWidth/2;
+			root.circle_y = circle.raduis + circle.circle_magin;
+			root.parentNode = null;
+			drawNode(root);
+			function drawNode(node){
+				if(node!=null){
+					var circle_x , circle_y;
+					var parentNode = node.parentNode;
+					if(parentNode!=null){
+						circle_x = node.sideType == 1 ? parentNode.circle_x+2*circle.raduis + circle.circle_magin : parentNode.circle_x-(2*circle.raduis + circle.circle_magin);
+						circle_y = parentNode.circle_y+2*circle.raduis + circle.circle_magin;
+					}else{
+						circle_x = node.circle_x;
+						circle_y = node.circle_y;
+					}
+					node.circle_x = circle_x;
+					node.circle_y = circle_y;
+
+					if(parentNode!=null){
+						c.beginPath();
+						c.fillStyle = line.color;
+						c.moveTo(parentNode.circle_x - Math.sqrt(Math.pow(circle.raduis,2)+Math.pow(circle.raduis,2))/2,parentNode.circle_y+Math.sqrt(50));
+						c.lineTo(node.circle_x,node.circle_y);
+						c.closePath();
+						c.stroke();
+					}
+
+					c.beginPath();
+					c.fillStyle = circle.color;
+					c.arc(circle_x,circle_y,circle.raduis,0,2 * Math.PI,true);
+					c.closePath();
+					c.fill();
+					c.fillStyle = text.color;
+					var data = node.data
+					var w = c.measureText(data).width;
+					c.fillText(data,circle_x-w/2,circle_y+text.margin_top);
+
+					if(node.left!=null){
+						node.left.sideType = 0;
+						node.left.parentNode = node;
+					}
+					if(node.right!=null){
+						node.right.sideType = 1;
+						node.right.parentNode = node;						
+					}
+					drawNode(node.left);
+					drawNode(node.right);
+				}
+			}	
 		}
+
 		/**tree end*/
 
 		var root = new Node("A");
@@ -94,7 +188,25 @@
 		n5.left = n6;
 
 		var tree = new Tree(root);
-		tree.traversal(TraversalType.backOrder);
+
+		var canvas = document.getElementById('canvas');
+
+		var c = canvas.getContext('2d');
+		canvas.width =1200;
+		canvas.height = 600;
+		c.cus_width = canvas.width;
+		c.cus_height = canvas.height;
+ 		// c.fillStyle = '#FF0000';
+		// c.beginPath();
+		// c.arc(canvas.width/2,canvas.height/2,20,0,2*Math.PI,true);
+		// c.fill();
+		// c.font = '30px Airal';
+		// c.fillStyle = '#ffffff';
+		// var textWidth = c.measureText('1').width;
+		// c.fillText('1',canvas.width/2-textWidth/2,canvas.height/2+10);
+		tree.draw(c);
+
+		// tree.traversal(TraversalType.backOrder);
 	</script>
 </body>
 </html>
