--- a/javascript2/js4.html
+++ b/javascript2/js4.html
@@ -260,23 +260,59 @@
 				//left
 				if(type == 1){
 					this.direction -= 1;
-					if(this.direction < 0){
-						this.direction = 3;
-					}
 				}else if(type == 2){
 					//right
 					this.direction += 1;
-					if(this.direction > 3){
-						this.direction = 0;
-					}
 				}else if(type == 3){
 					//back
 					this.direction += 2;
-					if(this.direction > 3){
-						this.direction = 0;
-					}
+				}
+				if(this.direction >= 0){
+					this.direction = this.direction % 4;
+				}else{
+					this.direction = 3;
 				}
 				this.renderInTable(this.table,this.preRow,this.preCol);
+			}
+
+			Squre.prototype.go = function(){
+				switch(this.direction){
+					case 0 :
+						var row = this.preRow - 1;
+						if(row == 0){
+							alert('can not go forword more!!');
+							return;
+						}
+						this.renderInTable(this.table,row,this.preCol);
+						break;
+					case 1 :
+						var col = this.preCol + 1;
+						if(col > 10){
+							alert('can not go right more!!');
+							return;
+						}
+						this.renderInTable(this.table,this.preRow,col);
+						break;
+					case 2 :
+						var row = this.preRow + 1;
+						if(row > 10){
+							alert('can not go back more!!');
+							return;
+						}
+						this.renderInTable(this.table,row,this.preCol);
+					break;
+					case 3 :
+						var col = this.preCol - 1;
+						if(col == 0){
+							alert('can not go left more!!');
+							return;
+						}
+						this.renderInTable(this.table,this.preRow,col);
+					break;
+					default :
+						alert('error cmd!');
+					break;
+				}
 			}
 			return new Squre();
 		})();
@@ -291,13 +327,17 @@
 		var btn = document.getElementById('btn');
 		var input = document.querySelector('input');
 		btn.onclick = function(e){
-			var val = input.value.toLowerCase();
-			if(val == 'right'){
+			var val = input.value.toLowerCase().replace(/\s+/g,'');
+			if(val == 'tunrig'){
 				squre.changeDirection(2);
-			}else if(val == 'left'){
+			}else if(val == 'tunlef'){
 				squre.changeDirection(1);
-			}else if(val == 'back'){
+			}else if(val == 'tunbac'){
 				squre.changeDirection(3);
+			}else if(val == 'go'){
+				squre.go();
+			}else{
+				alert('cmd error！！');
 			}
 		}
 
