--- a/javascript2/js6.html
+++ b/javascript2/js6.html
@@ -7,6 +7,7 @@
 		* {
 			margin: 0;
 			padding: 0;
+			font-size: 14px;
 		}
 		html,body {
 			width: 100%;
@@ -22,34 +23,118 @@
 		}
 		#dialog {
 			border: 1px solid red;
-			width: 600px;
+			width: 40%
+			height:45%;
 			position: absolute;
 			left: 50%;
 			transform: translate(-50%,-50%);
 			top: 50%;
 			background-color:#fff;
+			animation: dialogShow 0.6s forwards;
 		}
+		
+		@keyframes dialogShow {
+			from {
+				width: 20px;
+				height: 10px;
+			}
 
+			to {
+				width:40%;
+				height:45%;
+			}
+		}
 		#dialog>div:nth-child(1) {
 			border-bottom: 1px solid #000;
 		}
 		#title {
 			padding: 10px;
 			height: 20px;
+			text-align: center;
 		}
 		#content {
 			padding: 10px;
 			height: 200px;
-
+			position: relative;
+			text-align: left;
 		}
+
 	</style>
 </head>
 <body>
-	  <div id="mask">
+<!-- 	  <div id="mask">
 	  	<div id="dialog">
-	  		<div id="title"></div>
-	  		<div id="content"></div>
+	  		<div id="title">这是标题</div>
+	  		<div id="content">this is content~~~~~~~~~~~~~~~~</div>
 	  	</div>
-	  </div>
+	  </div> -->
+	  <script type="text/javascript">
+	  		function Dialog(title,message) {
+	  			this.actions = [];
+	  			this.title = title;
+	  			this.message = message;
+	  			this.mask = null;
+	  			this.dialog = null;
+	  			this.isShow = false;
+	  		}
+
+	  		Dialog.prototype.init = function(){
+	  			var mask = document.createElement('div');
+	  			mask.id = 'mask';	
+	  			this.mask = mask;
+
+	  			var dialog = document.createElement('div');
+	  			dialog.id = 'dialog';
+
+	  			var title = document.createElement('div');
+	  			title.id = 'title';
+
+	  			var content = document.createElement('div');
+	  			content.id = 'content';
+	  			dialog.appendChild(title);
+	  			dialog.appendChild(content);
+	  			this.dialog = dialog;
+	  		}
+
+	  		Dialog.prototype.show = function(){
+	  			if(!this.mask){
+	  				this.init();
+	  			}
+	  			document.getElementsByTagName('body')[0].appendChild(this.mask);
+	  			this.mask.appendChild(this.dialog);
+	  			this.isShow = true;
+	  		}
+	  		Dialog.prototype.dismiss = function(){
+	  			if(this.isShow){
+	  				this.mask.parentNode.removeChild(this.mask);
+	  				this.isShow = false;
+	  				this.mask = null;
+	  				this.dialog = null;
+	  			}
+	  		}
+
+	  		var dialog = new Dialog();
+	  		dialog.show();
+
+	  		// document.querySelector('body').onkeydown = function(e){
+	  		// 	alert(e.which);
+	  		// };
+
+	  		document.querySelector('body').addEventListener('keydown',function(e){
+	  			var e = window.event || e;
+	  			var code = e.keyCode || e.which;
+	  			if(code == 13){
+	  				dialog.dismiss();
+	  			}
+	  			if(String.fromCharCode(code) == 'S'){
+	  				if(!dialog.isShow){
+						dialog.show();
+	  				}else{
+	  					alert('already show!!!');
+	  				}
+	  						
+	  			}
+	  		});
+	  </script>
 </body>
 </html>
